# quick-data-viewer

sample-data/: sample.csv  sample.json  sample.jsonl
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: main.rs
