[package]
name = "quick-data-viewer"
version = "0.1.0"
description = "A quick data viewer for CSV, JSON, and JSONL files"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
